--- a/chat.html
+++ b/chat.html
@@ -8,9 +8,10 @@
 <body>
   <header class="header">
     <h1>MatchWork</h1>
-    <nav>
-      <a href="dashboard.html">Volver al perfil</a>
-    </nav>
+  <nav>
+    <a href="#" id="volverPostulaciones">Volver a postulaciones</a>
+  </nav>
+
   </header>
 
   <main class="chat-container">
