commit funciona todo

--- a/index.html
+++ b/index.html
@@ -80,12 +80,37 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 MatchWork – Todos los derechos reservados.</p>
-    </div>
-  </footer>
+<!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row text-center text-md-start">
+                <div class="col-md-4 mb-3">
+                    <h5>Proyecto Web</h5>
+                    <p>Trabajo práctico</p>
+                    <p>Prototipo funcional</p>
+                    <p>Gestión de proyectos</p>
+                    <p>ICES</p>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <h5>Integrantes</h5>
+                    <p>Bergonzi Juan José</p>
+                    <p>Bonzi Trinidad</p>
+                    <p>Botto Facundo</p>
+                    <p>Elsener Guadalupe</p>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <h5>Accesos</h5>
+                    <p>Funcionalidades</p>
+                    <p>Iniciar sesión</p>
+                    <p>Registrarse</p>
+                    <p>¿Cómo funciona?</p>
+                </div>
+            </div>
+            <div class="text-center border-top pt-3 mt-4">
+                <small>&copy; 2025 MatchWork - Gestión de proyectos - ICES</small>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
